@@ -1,3 +1,6 @@
+Jan 31, 2001: Bill Adams <bill@evil.inetarena.com>
+-Made it so OSP game types show up correctly.
+
 Jan 24, 2001: Bill Adams <bill@evil.inetarena.com>
 -Fixed the game.c hack.  Bad bug.
 	
